--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ a {
 }
 
 .header__item .icon-globe {
-  margin: 0rem 0 0rem;
+  margin: -0.1rem 0 0rem;
   height: 15px;
   font-size: 0rem;
   color: #000;
@@ -103,7 +103,9 @@ a {
   line-height: 1.1;
 }
 
-.display-lg br {
+.display-lg color-orange-high {
+  font-size: 1.95rem;
+  font-weight: 800;
   display: block;
   content: "";
   margin-bottom: 0.25rem;
@@ -128,10 +130,10 @@ a {
 
 .al-input__input {
   width: 100%;
-  height: 36px;
+  height: 46px;
   padding: 0.5rem 0.75rem;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1.7px solid #ccc;
   border-radius: 6px;
   background: white;
   box-sizing: border-box;
@@ -189,8 +191,8 @@ a {
   position: absolute;
   z-index: 2;
   left: 0.75rem;
-  top: 0.3rem; 
-  font-size: 1rem;
+  top: 0.75rem; 
+  font-size: 0.95rem;
   color: #888;
   background: transparent;
   padding: 0 0.25rem;
@@ -198,8 +200,8 @@ a {
 }
 
 .al-input__label.shrink {
-  top: 0.35rem;
-  font-size: 0.75rem;
+  top: 0.15rem;
+  font-size: 0.6rem;
 }
 
 
@@ -374,7 +376,7 @@ button:disabled {
 
 .locale-selector {
   position: relative;
-  top: -2rem;
+  top: -1.7rem;
 }
 
 .locale-dropdown {
@@ -424,4 +426,29 @@ button:disabled {
 .al-input.floating {
   position: relative;
   margin-bottom: 1rem;
+}
+
+.prefix {
+  display: flex;
+  align-items: center;
+  padding-right: 0.5rem;
+  position: relative;
+}
+
+.divider {
+  width: 1px;
+  height: 70%;
+  background-color: #ccc;
+  margin-left: 0.5rem;
+  transition: background-color 0.2s ease;
+}
+
+/* Цвет полоски при фокусе */
+.phone-wrapper.focused .divider {
+  background-color: #007aff;
+}
+
+/* Цвет полоски при ошибке */
+.phone-wrapper.error .divider {
+  background-color: #dc3545;
 }
